@@ -35,7 +35,7 @@ SG_BEGIN_DECL()
 
 XBT_PUBLIC(xbt_thread_t) xbt_thread_create(const char *name,
                                            void_f_pvoid_t start_routine,
-                                           void *param);
+                                           void *param,int joinable);
 XBT_PUBLIC(void) xbt_thread_exit();
 XBT_PUBLIC(xbt_thread_t) xbt_thread_self(void);
 XBT_PUBLIC(const char *) xbt_thread_name(xbt_thread_t t);
