@@ -97,7 +97,7 @@ gras_msg_listener_t gras_msg_listener_launch(xbt_queue_t msg_exchange)
   gras_msgtype_declare("_wakeup_listener", gras_datadesc_by_name("char"));
 
   /* actually start the thread */
-  arg->listener = xbt_thread_create("listener", listener_function, arg);
+  arg->listener = xbt_thread_create("listener", listener_function, arg,0/*not joinable*/);
   gras_os_sleep(0);             /* TODO: useless? give the listener a chance to initialize even if the main is empty and we cancel it right afterward */
   return arg;
 }
