@@ -1148,8 +1148,8 @@ XBT_TEST_UNIT("synchronized int", test_dynar_sync_int,"Synchronized dynars of in
 
   xbt_test_add0("==== Have a pusher and a popper on the dynar");
   d = xbt_dynar_new_sync(sizeof(int), NULL);
-  pusher = xbt_thread_create("pusher", pusher_f, d);
-  poper = xbt_thread_create("poper", poper_f, d);
+  pusher = xbt_thread_create("pusher", pusher_f, d,0/*not joinable*/);
+  poper = xbt_thread_create("poper", poper_f, d,0/*not joinable*/);
   xbt_thread_join(pusher);
   xbt_thread_join(poper);
   xbt_dynar_free(&d);
